<resources>
    <string name="app_name">Composition</string>
    <string name="welcome_logo" translatable="false">Welcome logo</string>
    <string name="composition_number">Состав числа</string>
    <string name="game_rules">Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней фигуре, для этого нужно вставить недостающее число.\n\nПример: в верхнем круге число 7,в одном из нижних знак вопроса, а в другом число 4. Значит на месте вопросительного знака должно быть число 3, потому что 3+4=7.</string>
    <string name="button_understand">Понятно</string>
    <string name="choose_level">Выберите уровень:</string>
    <string name="level_test">Тестовый</string>
    <string name="level_easy">Легкий</string>
    <string name="level_normal">Средний</string>
    <string name="level_hard">Сложный</string>
    <string name="timer" translatable="false">00:00</string>
    <string name="question_mark" translatable="false">\?</string>
    <string name="progress_answer">Правильных ответов %s (минимум %s)</string>
    <string name="required_answer">Необходимое количество правильных ответов: %s</string>
    <string name="required_percentage">Необходимый процент правильных ответов: %s</string>
    <string name="score_percentage">Процент правильных ответов: %s</string>
    <string name="score_answer">Ваш счет: %s</string>
    <string name="button_retry">Пробовать снова</string>
    <string name="game_over" translatable="false">Game over</string>
</resources>